# eliater

./: .bumpversion.cfg  .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: tests.yml
data/: __init__.py
docs/source/: conf.py  examples.rst  index.rst  installation.rst  usage.rst
notebooks/: Case_study1_The_Sars_cov2_model.ipynb  Case_study1_The_Tsignaling_pathway.ipynb  Case_study2_The_Sars_cov2_model.ipynb  Case_study2_The_Tsignaling_pathway.ipynb  Case_study3_The_EColi.ipynb  Look at Sachs Data.ipynb  README.md  motivating_example.ipynb  testing_CI_summary.ipynb
src/data/: sachs_discretized_2bin.csv
src/eliater/: __init__.py  api.py  discover_latent_nodes.py  io.py  network_validation.py  notebook_utils.py  regression.py  regression_v2.py  repair.py  sample_size_vs_pvalue.py  simplify_latent.py  version.py  workflow.py
src/eliater/algorithm/identify/: conditional_independencies.py
src/eliater/data/: EColi_obs_data.csv  EColi_obs_data_discrete.csv  SARS_COV2_obs_data  SARS_COV2_obs_data_discrete.csv  __init__.py  cd3cd28+g0076.csv  cd3cd28+g0076.xls  cd3cd28.csv  cd3cd28.xls  sachs.data.csv  sachs_discretized_2bin.csv
src/eliater/examples/: __init__.py  continuous.py  ecoli.py  frontdoor_backdoor.py  multi_causal_path.py  multi_med.py  multi_med_confounder.py  multi_med_confounder_nuisance_var.py  multi_mediators.py  multi_mediators_confounder.py  multi_mediators_confounder_nuisance_var.py  multiple_mediators.py  multiple_mediators_with_confounder.py  multiple_mediators_with_nuisance_confounder.py  sars.py  sars_cov2.py  sars_cov2_discrete.py  t_cell_signaling_pathway.py  utils.py
src/eliater/examples/frontdoor_backdoor_discrete/: __init__.py  example1.py
src/eliater/frontdoor_backdoor/: Sars_Cov2.py  __init__.py  base.py  example1.py  example2.py  example3.py  motivating_example.py  multiple_mediators.py  multiple_mediators_single_confounder.py  multiple_mediators_with_confounder.py  multiple_mediators_with_multiple_confounders.py  multiple_mediators_with_multiple_confounders_nuisances.py  multiple_mediators_with_nuisance_confounder.py  sars_cov2.py  sars_cov2_discrete.py
src/eliater/frontdoor_backdoor_discrete/: __init__.py  example1.py  multiple_mediators_with_multiple_confounders_nuisances_discrete.py  sars_cov2_discrete.py  single_mediator_with_multiple_confounders_nuisances_discrete.py
tests/: __init__.py  test_discover_latent_nodes.py  test_io.py  test_network_validation.py  test_regression.py  test_repair.py  test_simplify_latent.py  test_version.py  test_workflow.py
tests/data/: SARS_COV2_obs_data.csv
tests/test_algorithm/: test_conditional_independencies.py
