##########################
# Setup.py Configuration #
##########################
[metadata]
name = eliater
version = 0.0.1-dev
description = A high level, end-to-end causal inference workflow.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/y0-causal-inference/eliater
download_url = https://github.com/y0-causal-inference/eliater/releases
project_urls =
    Tracker = https://github.com/y0-causal-inference/eliater/issues
    Source = https://github.com/y0-causal-inference/eliater
    Documentation = https://eliater.readthedocs.io

# Author information
author = Sara Taheri
author_email = srtaheri66@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    snekpack
    cookiecutter
    causal inference

[options]
install_requires =
    y0>=0.2.7
    scipy
    numpy
    ananke-causal>=0.5.0
    pgmpy>=0.1.24
    matplotlib
    pandas
    seaborn
    optimaladj>=0.0.4

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.10

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx<7.0
    sphinx-rtd-theme
    sphinx_automodapi
    texext

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = eliater
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/eliater
    .tox/*/lib/python*/site-packages/eliater

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    E203  # whitespace before ':'
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    eliater
    y0
    tests
